# clippybara2

./: Cargo.toml  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/clippybara2/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/services/: api_service.dart  clipboard_service.dart  qr_service.dart
lib/utils/: platform_utils.dart
lib/widgets/: qr_display_widget.dart  qr_scanner_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: api.rs  clipboard.rs  config.rs  lib.rs  qrcode.rs
src/ui/: mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
