[package]
name = "clippybara"
version = "0.1.0"
edition = "2021"
authors = ["nathfavour"]
description = "Cross-platform clipboard syncing using noplacelike"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
arboard = "3.2"

# UI and platform integration
iced = { version = "0.10", features = ["tokio", "image"] }
iced_native = "0.10"

# For QR code scanning and generation
bardecoder = "0.4"
qrcode = "0.12"
image = "0.24"

# Platform-specific dependencies
dirs = "5.0"
notify = "6.0"
open = "5.0"

# For mobile detection
#[target.'cfg(target_os = "android")'.dependencies]
# Add Android-specific dependencies here when targeting Android

# For iOS detection
#[target.'cfg(target_os = "ios")'.dependencies]
# Add iOS-specific dependencies here when targeting iOS

[features]
default = ["desktop"]
desktop = []
mobile = []

[[bin]]
name = "clippybara"
path = "src/main.rs"

[lib]
name = "clippybara"
path = "src/lib.rs"
